# fitlins

./: .codecov.yml  .dockerignore  .gitattributes  .gitignore  .mailmap  .neurodocker.json  .pep8speaks.yml  .pre-commit-config.yaml  .readthedocs.yml  .zenodo.json  CHANGES.md  CHANGES.rst  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.jupyter  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini  versioneer.py
.circleci/: config.yml
.github/: release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/PULL_REQUEST_TEMPLATE/: pull_request.md
.github/workflows/: build.yml  codeql-analysis.yml  get_dataset.yml  package.yml  workflows.yml
docker/: multiproc.coveragerc  neurodocker.sh
docs/: Makefile  changes.md  changes.rst  citing.rst  conf.py  estimators.rst  index.rst  installation.rst  license.rst  links.rst  model.rst  support.rst  usage.rst
docs/_static/: reports
docs/examples/: index.rst  models.rst  reports.rst
example/ds000030/derivatives/fitlins/: model-ds000030Bart.html
example/ds000030/derivatives/fitlins/sub-10171/: sub-10171_model-ds000030Bart.html
examples/: README.rst  ds003_sample_analysis.ipynb
examples/models/: README.rst
examples/models/ds000003/models/: model-001_smdl.json
examples/models/ds000030/models/: model-001_smdl.json
examples/models/ds000114/models/: model-001_smdl.json
examples/models/ds000117/models/: model-001_smdl.json
examples/notebooks/: .gitignore  README.rst  ds003_sample_analysis.ipynb
examples/openfmri/ds000030/: model.json
examples/reports/: model-ds003Model001.html
examples/reports/sub-01/: sub-01_model-ds003Model001.html
fitlins/: __about__.py  __init__.py  __main__.py  _version.py  base.py  conftest.py  generate_dset.py  info.py  version.py
fitlins/cli/: run.py
fitlins/data/: first_level_report.tpl  fitlins.json  full_report.tpl  nipype.cfg  report.tpl  second_level_report.tpl
fitlins/data/conte69/: README.md  tpl-conte69_hemi-L_space-fsLR_den-32k_inflated.surf.gii  tpl-conte69_hemi-R_space-fsLR_den-32k_inflated.surf.gii
fitlins/interfaces/: __init__.py  abstract.py  afni.py  bids.py  fsl.py  nistats.py  pymare_extension.py  test_afni.py  utils.py  visualizations.py
fitlins/interfaces/tests/: test_afni.py  test_nistats.py
fitlins/tests/: README.md  conftest.py  test_outputs.py
fitlins/utils/: __init__.py  bids.py  collections.py  config.py  strings.py
fitlins/viz/: __init__.py  contrasts.py  corr.py  diagnostics.py  reports.py
fitlins/workflows/: __init__.py  base.py
fitlins/workflows/tests/: test_base.py  test_workflow.py
openfmri/ds000030/: model.json  model_with_rt.json
tools/: update_changes.sh
tools/ci/: check.sh  conda_environment.yml  env.sh  install.sh  install_extras.sh
