[metadata]
name = fitlins
url = https://github.com/poldracklab/fitlins
author = Christopher J. Markiewicz
author_email = crn.poldracklab@gmail.com
description = Fit Linear Models to BIDS Datasets
long_description = file:README.rst
long_description_content_type = text/x-rst; charset=UTF-8
license = 3-clause BSD
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

description-file = README.rst

[versioneer]
VCS = git
style = pep440
versionfile_source = fitlins/_version.py
versionfile_build = fitlins/_version.py
tag_prefix =
parentdir_prefix =

[flake8]
max-line-length = 99
doctests = True
exclude=*build/
per-file-ignores =
    */__init__.py : F401
