[metadata]
url = https://github.com/poldracklab/fitlins
author = Christopher J. Markiewicz
author_email = crn.poldracklab@gmail.com
description = Fit Linear Models to BIDS Datasets
long_description = file:README.rst
long_description_content_type = text/x-rst; charset=UTF-8
license = 3-clause BSD
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

description-file = README.rst

[options]
packages = find:
include_package_data = True
python_requires = >=3.6
install_requires =
    nibabel>=2.0
    nipype>=1.1.6
    seaborn>=0.10.0
    numpy>=1.11
    nilearn>=0.4
    pandas>=0.19
    tables>=3.2.1
    nistats~=0.0.1b2
    pybids>=0.10.2
    jinja2

[options.extras_require]
duecredit = duecredit
test = coverage<5
docs =
    sphinx~=2.4
    sphinxcontrib-apidoc~=0.3.0
    sphinx-argparse~=0.2.5
    sphinx-nbexamples >=0.4.0
    texext
    m2r
style =
    flake8 >= 3.7.0
all =
    %(docs)s
    %(duecredit)s
    %(style)s
    %(test)s

[options.entry_points]
console_scripts =
    fitlins=fitlins.cli.run:main

[options.package_data]
fitlins =
    data/*.json
    data/*.tpl

[options.exclude_package_data]
* =
    examples

[versioneer]
VCS = git
style = pep440
versionfile_source = fitlins/_version.py
versionfile_build = fitlins/_version.py
tag_prefix =
parentdir_prefix =

[flake8]
max-line-length = 99
doctests = True
exclude=*build/
per-file-ignores =
    **/__init__.py : F401

[coverage:run]
branch = True
omit =
    */tests/*
