[metadata]
url = https://github.com/poldracklab/fitlins
author = Christopher J. Markiewicz
author_email = crn.poldracklab@gmail.com
description = Fit Linear Models to BIDS Datasets
long_description = file:README.rst
long_description_content_type = text/x-rst; charset=UTF-8
license = 3-clause BSD
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

description-file = README.rst

[options]
packages = find:
python_requires = >=3.7
install_requires =
    nibabel>=2.0
    nipype>=1.3.2
    seaborn>=0.10.0
    numpy>=1.11
    nilearn~=0.8.1
    pandas>=0.19
    tables>=3.2.1
    pybids~=0.15.0
    jinja2

[options.extras_require]
duecredit = duecredit
test =
    coverage
    pytest
    pytest-cov
workflow =
    %(test)s
docs =
    sphinx~=4.5.0
    sphinxcontrib-apidoc~=0.3.0
    sphinx-argparse~=0.3.1
    nbsphinx~=0.8.8
    texext~=0.6.6
    myst-parser~=0.17.0
style =
    flake8 >= 3.7.0
all =
    %(docs)s
    %(duecredit)s
    %(style)s
    %(test)s

[options.entry_points]
console_scripts =
    fitlins=fitlins.cli.run:main

[options.package_data]
fitlins =
    data/*.json
    data/*.tpl
    data/nipype.cfg
    data/conte69/*.gii

[options.exclude_package_data]
* =
    examples

[versioneer]
VCS = git
style = pep440-pre
versionfile_source = fitlins/_version.py
versionfile_build = fitlins/_version.py
tag_prefix =
parentdir_prefix =

[flake8]
max-line-length = 99
doctests = True
exclude=*build/
per-file-ignores =
    **/__init__.py : F401

[coverage:run]
branch = True
omit =
    */tests/*
